ops: cert script and conf modification

--- a/flask-rest/server.conf
+++ b/flask-rest/server.conf
@@ -9,9 +9,9 @@ x509_extensions    = v3_req
 C  = ES
 ST = Madrid
 L  = Madrid
-O  = UAM
-OU = IoT
-CN = 192.168.1.64
+O  = Flask Assistant (TM)
+OU = Dev Team
+CN = glados.local
 emailAddress = expositotomas2002@gmail.com
 
 [v3_req]
@@ -19,3 +19,4 @@ subjectAltName = @alt_names
 
 [alt_names]
 IP.1 = 192.168.1.64
+DNS.1 = glados.local
