--- a/flask-rest/requirements.txt
+++ b/flask-rest/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 dotenv==0.9.9
 Flask==3.1.0
+flask-cors==5.0.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
