--- a/wear-smart/gradle/libs.versions.toml
+++ b/wear-smart/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.8.0"
+jmdns = "3.5.7"
 kotlin = "2.0.0"
 kotlinxSerializationJson = "1.5.0"
 okhttp = "4.9.3"
@@ -14,6 +15,7 @@ composeNavigation = "1.4.1"
 composeMaterial3 = "1.0.0-alpha33"
 
 [libraries]
+jmdns = { module = "org.jmdns:jmdns", version.ref = "jmdns" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
